--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Pakcage
         uses: BigWigsMods/packager@v2
+        with:
+          args: -S
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           #WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
