--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Pakcage
         uses: BigWigsMods/packager@v2
         with:
-          args: -S
+          args: -p 283672
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           #WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
